# combinators-llm

./: .gitignore  README.md  demo.ipynb  demo.py  pyproject.toml  test.lean  validation_results.json
combinators_llm/: __init__.py  build.py  config.py  dataset.py  main.py  train.py  validation.py
combinators_llm/generators/: __init__.py  beam_search.py  greedy.py
combinators_llm/model/: config.py  train.py  validation.py
combinators_llm/modules/: Decoder.py  DecoderBlock.py  Encoder.py  EncoderBlock.py  FeedForwardBlock.py  InputEmbedding.py  LayerNormalization.py  MultiHeadAttentionBlock.py  PositionalEncoding.py  ProjectionLayer.py  ResidualConnection.py  Transformer.py  __init__.py
combinators_llm/tokenizers/: __init__.py  base.py  term-tokenizer.json  term.json  term.py  type-tokenizer.json  type.py
combinators_llm/utils/: __init__.py  causal_mask.py  lean.py  prompt_stop.py
