[tool.poetry]
name = "combinators-llm"
version = "0.1.0"
description = ""
authors = ["Carlos Fernandez <carlos.ferlo@outlook.com>"]
readme = "README.md"
packages = [{"include"="combinators_llm"}]

[tool.poetry.dependencies]
python = "<3.14,>=3.9"
tokenizers = "^0.21.4"
datasets = "^4.0.0"
wandb = "^0.21.1"
python-dotenv = "^1.1.1"
torch = { version = "^2.4.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "combinators_llm.train:main"
validate = "combinators_llm.validation:main"
demo = "demo:main"
